Websocket, bug fix

--- a/test/Makefile
+++ b/test/Makefile
@@ -204,7 +204,7 @@ android/dist/sdcard/s52android/UI.xml: android/dist/sdcard/s52android/UI.tmpl.xm
 	adb push  android/dist/sdcard/s52android/UI.xml /sdcard/s52android/UI.xml                           
 
 sl4agps.cfg:
-	rm android/dist/sdcard/s52android/UI.xml
+	-rm android/dist/sdcard/s52android/UI.xml
 
 #$(STRIP)  sl4agps
 sl4agps: sl4agps.c sl4agps.cfg android/dist/sdcard/s52android/UI.xml
