--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -17,14 +17,22 @@
     <uses-permission android:name = "android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <uses-permission android:name = "android.permission.KILL_BACKGROUND_PROCESSES" />
+
+    <uses-permission android:name = "android.permission.FORCE_STOP_PACKAGES" />
+    
+    <uses-permission android:name = "android.permission.INTERACT_ACROSS_USERS_FULL" />
+
     <!-- This is the platform API where NativeActivity was introduced. -->
     <!-- target sdk 11 to get action bar  (and no MENU)                -->
-    <uses-sdk android:minSdkVersion    = "9"
-              android:targetSdkVersion = "10" />
+    <!--      android:targetSdkVersion = "16" />                       -->
     <!--
     <uses-sdk android:minSdkVersion    = "10"
               android:targetSdkVersion = "16" />
     -->
+    <uses-sdk android:minSdkVersion    = "9"
+              android:targetSdkVersion = "10" />
+
+
     <!-- This .apk has no Java code itself, so set hasCode to false. -->
     <application android:label               = "@string/app_name"
                  android:hasCode             = "false"
