--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <!-- Allows applications to open network sockets to get AIS from radar.imar.ca 8000 -->
     <uses-permission android:name = "android.permission.INTERNET"               />
-    <!-- Allows applications to write gpsd.sock and gpsd.pid to sdcard -->
+    <!-- Allows applications to write gpsd.sock, gpsd.pid, sl4agps.pid, s52ais.pid to sdcard -->
     <uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-permission android:name = "android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -19,8 +19,11 @@
     <uses-permission android:name = "android.permission.KILL_BACKGROUND_PROCESSES" />
 
     <uses-permission android:name = "android.permission.FORCE_STOP_PACKAGES" />
-    
+
+    <!-- Android 4.2
     <uses-permission android:name = "android.permission.INTERACT_ACROSS_USERS_FULL" />
+    -->
+
 
     <!-- This is the platform API where NativeActivity was introduced. -->
     <!-- target sdk 11 to get action bar  (and no MENU)                -->
@@ -37,17 +40,22 @@
     <application android:label               = "@string/app_name"
                  android:hasCode             = "false"
                  android:debuggable          = "true"
+                 android:hardwareAccelerated = "true"
                  android:theme               = "@android:style/Theme.Holo">
 
                  <!--
-                 android:hardwareAccelerated = "true">
+                 android:hardwareAccelerated = "true"
                  -->
 
+
         <!-- Our activity is the built-in NativeActivity framework class.
-             This will take care of integrating with our NDK code. -->
+             This will take care of integrating with our NDK code.
+
+             "reverseLandscape"
+        -->
         <activity android:name                  = "android.app.NativeActivity"
                   android:label                 = "@string/app_name"
-                  android:screenOrientation     = "reverseLandscape"
+                  android:screenOrientation     = "sensorLandscape"
                   android:alwaysRetainTaskState = "true"
                   android:configChanges         = "orientation|screenSize"
                   android:launchMode            = "singleInstance"
