--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -18,30 +18,32 @@
 
 
 
-    <!-- Allows applications to open network sockets to get AIS from radar.imar.ca
+    <!-- Allows applications to open network sockets to get AIS from radar.imar.ca -->
     <uses-permission android:name = "android.permission.INTERNET"               />
-     -->
-    <!-- Allows applications to write gpsd.sock, gpsd.pid, sl4agps.pid, s52ais.pid to sdcard
+    <!-- Allows applications to write gpsd.sock, gpsd.pid, sl4agps.pid, s52ais.pid to sdcard -->
     <uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE" />
-     -->
+
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <!-- Android 4.1.2 SDK-16 not reconize !
     <uses-permission android:name="android.permission.RECORD_VIDEO"/>
+    -->
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
+    <!--  NOT browser cache
+    <uses-permission android:name="android.permission.CLEAR_APP_USER_DATA"/>
+    -->
 
     <!-- This is the platform API where NativeActivity was introduced. -->
     <!-- target sdk 11 to get action bar  (and no MENU)                -->
