add test to follow AIS, rot. buot light in s52ui

--- a/test/s52ui/Makefile
+++ b/test/s52ui/Makefile
@@ -2,9 +2,11 @@
 #
 # 2013FEB25
 
+
 DARTSDKPATH = /home/sduclos/dev/prog/dart/dart/dart-sdk/bin
 
 web/s52ui.dart.js: web/s52ui.dart
 	$(DARTSDKPATH)/dart2js web/s52ui.dart -oweb/s52ui.dart.js
 
-adb push ../s52ui /data/media/dart/s52ui
+install:
+	adb push ../s52ui /data/media/dart/s52ui
