--- a/test/Makefile
+++ b/test/Makefile
@@ -72,11 +72,8 @@ s52glx:     CFLAGS = `pkg-config --cflags glib-2.0` -I.. -DS52_USE_GTK2 -DS52_US
 # Note: the -DS52_USE_AFGLOW need symbole in PLAUX_00.DAI
 # -DS52_USE_AFGLOW -DS52_USE_FAKE_AIS
 s52eglx:    CFLAGS =  -I.. -I. `pkg-config --cflags egl glib-2.0 gthread-2.0 gobject-2.0 libgps` \
-                      -DS52_USE_DOTPITCH -DS52_USE_SOCK
+                      -DS52_USE_DOTPITCH -DS52_USE_SOCK -DS52_USE_AFGLOW
 
-#                      -I$(S52ANDROIDINC)
-#                      -I$(S52ANDROIDINC)/glib-2.0
-#                      -I$(S52ANDROIDINC)/glib-android-1.0
 s52eglarm:  CFLAGS =  -DS52_USE_DOTPITCH                 \
                       -DS52_USE_ANDROID                  \
                       -DS52_USE_TEGRA2                   \
