--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android       = "http://schemas.android.com/apk/res/android"
-          package             = "nav.ecs.s52android"
+          package             = "nav.ecs.s52droid"
           android:versionCode = "1"
           android:versionName = "1.0"
           android:windowSoftInputMode = "adjustPan"
@@ -85,7 +85,7 @@
 
             <!-- Tell NativeActivity the name of or .so -->
             <meta-data android:name  = "android.app.lib_name"
-                       android:value = "s52android"               />
+                       android:value = "s52droid"               />
 
             <!--
             <meta-data android:name  = "android.app.func_name"
