--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -74,11 +74,12 @@
                   android:label                 = "@string/app_name"
                   android:alwaysRetainTaskState = "true"
                   android:launchMode            = "singleInstance"
-                  android:configChanges         = "orientation|screenSize"
+                  android:configChanges         = "orientation"
                   android:theme                 = "@android:style/Theme.Holo"
                   >
 
                   <!--
+                  android:configChanges         = "orientation|screenSize"
                   android:screenOrientation     = "sensorLandscape"
                   android:clearTaskOnLaunch     = "true"
                   -->
