--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -40,6 +40,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
 
     <!--  NOT browser cache
     <uses-permission android:name="android.permission.CLEAR_APP_USER_DATA"/>
@@ -49,11 +50,12 @@
     <!-- target sdk 11 to get action bar  (and no MENU)                -->
     <!--      android:targetSdkVersion = "16" />                       -->
     <!--
+              android:targetSdkVersion = "10" />
     <uses-sdk android:minSdkVersion    = "10"
               android:targetSdkVersion = "16" />
     -->
     <uses-sdk android:minSdkVersion    = "3"
-              android:targetSdkVersion = "10" />
+              android:targetSdkVersion = "17" />
 
     <application android:label               = "@string/app_name"
                  android:hasCode             = "true"
